--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk deploy '*' --require-approval 'never'"
+    "deploy": "cdk deploy --all"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.119.0",
     "@types/jest": "^27.0.1",
     "@types/node": "16.7.1",
-    "jest": "^27.0.6",
+    "aws-cdk": "1.203.0",
+    "jest": "^27.5.1",
     "ts-jest": "^27.0.5",
-    "aws-cdk": "1.119.0",
     "ts-node": "^10.2.1",
     "typescript": "~4.3.5"
   },
